# einsum_ir

python/: CMakeLists.txt
python/src/: BackendFactory.cpp  BackendInterface.h  TensorOperation.cpp  TensorOperation.h  TppBackend.cpp  TppBackend.h  TppMlirBackend.cpp  TppMlirBackend.h  bindings.cpp
python/src/etops/: __init__.py
